# aibom2

./: README.md  cli.py  deploy.py  main.py  main_simple.py  pyproject.toml  requirements.txt  requirements_simple.txt  test_agent.py
aibom_agent/: __init__.py
aibom_agent/config/: settings.py
aibom_agent/core/: agent_orchestrator.py  agent_system.py
aibom_agent/models/: __init__.py  analysis_result.py
aibom_agent/services/: __init__.py  aibom_generator.py  bedrock_agent.py  comparison_engine.py  huggingface_service.py  report_generator.py
aibom_agent/templates/: comparison_report.html  single_model_report.html
aibom_agent_system_v2/: Dockerfile
aibom_minimal/: Dockerfile
reports/: aibom_comparison_microsoft_DialoGPT-medium_vs_facebook_blenderbot-400M-distill_20251227_200802.html  aibom_report_facebook_blenderbot-400M-distill_20251227_200802.html  aibom_report_microsoft_DialoGPT-medium_20251227_200749.html  aibom_report_microsoft_DialoGPT-medium_20251227_200801.html
src/aibom_agent_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
